Fix JSON serialization of PerformanceEntry subclasses

Attributes defined in PerformanceEntry subclasses were not included in
serialized object because toJSONForBinding() wasn't polymorphic.

BUG=592171
test=http/tests/misc/performance-entry-serializer.html

Review URL: https://codereview.chromium.org/1780523005

Cr-Commit-Position: refs/heads/master@{#380577}

Former-commit-id: 48db6a49b37d8302a9bedd6321110546dccaf7eb