third_party/WebKit/Source/core/timing/PerformanceRenderTiming.cpp
@@ -32,6 +32,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "core/timing/PerformanceRenderTiming.h"
 
+#include "bindings/core/v8/V8ObjectBuilder.h"
 #include "core/dom/Document.h"
 #include "core/loader/DocumentLoader.h"
 
@@ -57,6 +58,12 @@ PerformanceRenderTiming::~PerformanceRenderTiming()
 unsigned PerformanceRenderTiming::sourceFrame() const
 {
     return m_sourceFrame;
+}
+
+void PerformanceRenderTiming::buildJSONValue(V8ObjectBuilder& builder) const
+{
+    PerformanceEntry::buildJSONValue(builder);
+    builder.addNumber("sourceFrame", sourceFrame());
 }
 
 DEFINE_TRACE(PerformanceRenderTiming)
