third_party/WebKit/Source/core/timing/PerformanceRenderTiming.h
@@ -53,6 +53,9 @@ public:
 
     DECLARE_VIRTUAL_TRACE();
 
+protected:
+    void buildJSONValue(V8ObjectBuilder&) const override;
+
 private:
     PerformanceRenderTiming(Document* requestingDocument, unsigned sourceFrame, double startTime, double finishTime);
     ~PerformanceRenderTiming() override;
